# OMNIX-Caishenfolio

./: .gitignore  AGENTS.md  Caishenfolio.slnx  Directory.Build.props  README.md
.omx/development/: current.md  decisions.md  error-ledger.md  handoff.md  quality-gates.md  reflections.md  skill-candidates.md  worklog.md
docs/: API.md  ARCHITECTURE.md  DATA_SEMANTICS.md  MARKET_PROVIDERS.md  MARKET_UX_SCHEME.md  SECURITY_MODEL.md
python/: pyproject.toml
python/caishenfolio_core/: __init__.py
python/caishenfolio_core/data/: __init__.py  bar_interval.py  models.py
python/caishenfolio_core/market/: __init__.py  akshare_provider.py  alphavantage_provider.py  bar_cache.py  base.py  cached_market.py  catalog.py  composite.py  credentials.py  factory.py  fixture.py  fund_catalog.py  network.py  parquet_store.py  symbol_index.py  tushare_provider.py  yfinance_provider.py
python/caishenfolio_core/research/: __init__.py  backtest.py  compare.py  grid.py  grid_ledger.py  report.py
python/caishenfolio_core/security/: __init__.py  loopback.py  path_policy.py  redaction.py
python/caishenfolio_core/server/: __init__.py  __main__.py  app.py  http_server.py
python/caishenfolio_core/tasks/: __init__.py  models.py  store.py
scripts/: verify_p0.ps1  verify_p1.ps1  verify_p2.ps1  verify_p3.ps1
src/Caishenfolio.Desktop/: App.xaml  App.xaml.cs  BacktestResultWindow.xaml  BacktestResultWindow.xaml.cs  BacktestSettingsWindow.xaml  BacktestSettingsWindow.xaml.cs  Caishenfolio.Desktop.csproj  CandleChartPainter.cs  CompareChartPainter.cs  CompareWindow.xaml  GridView.xaml  (+15 more)
(+48 files in other folders)
